--- a/index.html
+++ b/index.html
@@ -1,2 +1,8 @@
 <h1>New Static Site with Pages</h1>
-<p>This is a basic site created with github pages for my final assignment module</p>
+<p>This is a basic site created with GitHub pages for my final assignment module</p>
+
+<footer>
+  <div>
+    <p><a href="/index.html">Home</a> | <a href="about.html">About</a></p>
+  </div>
+</footer>
