--- a/about.html
+++ b/about.html
@@ -10,3 +10,9 @@
     <li>Recent Projects: Data Analytics | Programming in Python</li>
   </ol>
 </div>
+
+<footer>
+  <div>
+    <p><a href="/index.html">Home</a> | <a href="about.html">About</a></p>
+  </div>
+</footer>
